{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 13,
  "lineage": "29bdffac-e0d2-c19b-22d3-eb0df9996497",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Testing_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-068257025f72f470d",
            "arn": "arn:aws:ec2:ap-south-1:822538410785:instance/i-0a401105acfc7643d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a401105acfc7643d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "k2-terra-instance.pem",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06c28a84855d295a9",
            "private_dns": "ip-10-0-0-142.ap-south-1.compute.internal",
            "private_ip": "10.0.0.142",
            "public_ip": "13.233.136.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0818e7f7c99096251",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03d3bac566d092396",
            "tags": {
              "Name": "instance-created-by-terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b66e047014f1e515"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_key_pair",
            "aws_security_group.allow_ssh",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "public_internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:822538410785:internet-gateway/igw-08f14d8ca2b3b7a4b",
            "id": "igw-08f14d8ca2b3b7a4b",
            "owner_id": "822538410785",
            "tags": {
              "Name": "test_internet_gateway"
            },
            "vpc_id": "vpc-0844cae33571a7050"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:822538410785:route-table/rtb-00a37c212b2d3ce79",
            "id": "rtb-00a37c212b2d3ce79",
            "owner_id": "822538410785",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08f14d8ca2b3b7a4b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "vpc_id": "vpc-0844cae33571a7050"
          },
          "dependencies": [
            "aws_internet_gateway.public_internet_gateway",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_route_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5584acaac74cab5",
            "route_table_id": "rtb-00a37c212b2d3ce79",
            "subnet_id": "subnet-03d3bac566d092396"
          },
          "dependencies": [
            "aws_internet_gateway.public_internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:822538410785:security-group/sg-0b66e047014f1e515",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b66e047014f1e515",
            "ingress": [
              {
                "cidr_blocks": [
                  "103.249.249.171/32"
                ],
                "description": "Inbound SSH access from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20220722075403795300000002",
            "name_prefix": "terraform-",
            "owner_id": "822538410785",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0844cae33571a7050"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:822538410785:subnet/subnet-03d3bac566d092396",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-03d3bac566d092396",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "822538410785",
            "tags": {
              "Name": "public_vpc_subnet"
            },
            "tags_all": {
              "Name": "public_vpc_subnet"
            },
            "vpc_id": "vpc-0844cae33571a7050"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:822538410785:vpc/vpc-0844cae33571a7050",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-03463adfdae98cdd9",
            "default_route_table_id": "rtb-09bf013d02656a76f",
            "default_security_group_id": "sg-0cf3a5a0d4b1a3349",
            "dhcp_options_id": "dopt-0e9bb26af53218adc",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0844cae33571a7050",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09bf013d02656a76f",
            "owner_id": "822538410785",
            "tags": {
              "Name": "test_vpc"
            },
            "tags_all": {
              "Name": "test_vpc"
            }
          }
        }
      ]
    }
  ]
}